--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ./ComputerCraft.zip
-          asset_name: ComputerCraft.zip
+          asset_path: ./ComputerCreat.zip
+          asset_name: ComputerCreat.zip
           asset_content_type: application/zip
