--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Upload to Modrinth
         uses: RubixDev/modrinth-upload@v1.0.0
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.MODRINTH_TOKEN }}
           file_path: ./ComputerCreate.zip
           name: ComputerCreate ${{ github.event.release.tag_name }}
           version: ${{ github.event.release.tag_name }}
