--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,7 @@ name: Publish on modrinth
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   release:
+    types: [ published ]
     branches: [ "main" ]
 
   # Allows you to run this workflow manually from the Actions tab
