actions: added github update back

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,3 +43,13 @@ jobs:
           featured: true
           project_id: PtgHJyfu
           loaders: minecraft
+      
+      - name: Upload to the GitHub release
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ github.event.release.upload_url }}
+          asset_path: ./ComputerCreate.zip
+          asset_name: ComputerCreate.zip
+          asset_content_type: application/gzip
