--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,35 +1,27 @@
-# This is a basic workflow to help you get started with Actions
-
 name: Publish on modrinth
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
+  # Triggers the action when a release is published
   release:
     types: [ published ]
     branches: [ "main" ]
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  publish:
+   # linux best
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+  
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      # Get the source code
       - uses: actions/checkout@v3
 
-      # Runs a single command using the runners shell
+      # Package the resource pack in a nice package
       - name: Run the resource pack packager
         run: |
           cd $GITHUB_WORKSPACE
           python3 distribute.py
       
+      # Upload the new release on Modrinth
       - name: Upload to Modrinth
         uses: RubixDev/modrinth-upload@v1.0.0
         with:
@@ -39,11 +31,12 @@ jobs:
           version: ${{ github.event.release.tag_name }}
           changelog: ${{ github.event.release.body }}
           game_versions: 1.18
-          release_type: beta
+          release_type: release
           featured: true
-          project_id: PtgHJyfu
+          project_id: KqGEAQeu
           loaders: minecraft
       
+      # Upload the package on the release
       - name: Upload to the GitHub release
         uses: actions/upload-release-asset@v1
         env:
