--- a/.github/workflows/legacy.yml
+++ b/.github/workflows/legacy.yml
@@ -31,7 +31,7 @@ jobs:
           game_endpoint: "minecraft"
           project_id: "603936"
           changelog: ${{ github.event.release.body }}
-          game_versions: "Minecraft 1.16, Minecraft 1.17, Minecraft 1.18, Minecraft 1.19"
+          game_versions: "Minecraft 1.16,Minecraft 1.17,Minecraft 1.18,Minecraft 1.19"
       
       # Upload the new release on Modrinth
       - name: Upload to Modrinth
@@ -42,7 +42,7 @@ jobs:
           name: ComputerCreate ${{ github.event.release.tag_name }}
           version: ${{ github.event.release.tag_name }}
           changelog: ${{ github.event.release.body }}
-          game_versions: "1.16, 1.17, 1.18, 1.19"
+          game_versions: "1.16,1.17,1.18,1.19"
           release_type: release
           featured: true
           project_id: KqGEAQeu
