--- a/.github/workflows/latest.yml
+++ b/.github/workflows/latest.yml
@@ -27,9 +27,9 @@ jobs:
           token: "${{ secrets.CF_API_TOKEN }}"
           file_path: "./ComputerCreate.zip"
           game_endpoint: "minecraft"
-          project_id: "70886,73242,73250,73407,75125"
+          project_id: "603936"
           changelog: ${{ github.event.release.body }}
-          game_versions: "Minecraft 1.20.1"
+          game_versions: "70886,73242,73250,73407,75125"
       
       # Upload the new release on Modrinth
       - name: Upload to Modrinth
